--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,7 @@
 ---
-
+import MainLayout from '../layouts/MainLayout.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Brad Johnson</title>
-	</head>
-	<body>
-		<h1>Brad Johnson</h1>
-	</body>
-</html>
+<MainLayout>
+	<p>Landing Page</p>
+</MainLayout>
