--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,10 +12,7 @@ import '@fontsource/darker-grotesque';
   </head>
 
   <body class="font-sans bg-[#FFF2E8] h-screen">
-    <header class="">
-      <h1 class="text-6xl font-bold">Brad Johnson</h1>
-    </header>
-    <main>
+    <main class="">
       <slot />
     </main>
   </body>
