--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,16 @@ import MainLayout from '../layouts/MainLayout.astro';
 ---
 
 <MainLayout>
-	<p>Landing Page</p>
+  <header
+    class="flex justify-between items-center py-3 px-24 border-b-4 border-black"
+  >
+    <h1 class="text-5xl font-semibold p-2">Brad Johnson</h1>
+    <nav>
+      <ul class="flex gap-4 uppercase text-lg">
+        <li><a href="#">Stuff</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 </MainLayout>
