--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,28 @@ import MainLayout from '../layouts/MainLayout.astro';
   >
     <h1 class="text-5xl font-semibold p-2">Brad Johnson</h1>
     <nav>
-      <ul class="flex gap-4 uppercase text-lg">
-        <li><a href="#">Stuff</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Contact</a></li>
+      <ul class="flex text-lg uppercase">
+        <li>
+          <a
+            href="#"
+            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
+            >Stuff</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
+            >Resume</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
+            >Contact</a
+          >
+        </li>
       </ul>
     </nav>
   </header>
