--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,25 +10,13 @@ import MainLayout from '../layouts/MainLayout.astro';
     <nav>
       <ul class="flex text-lg uppercase">
         <li>
-          <a
-            href="#"
-            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
-            >Stuff</a
-          >
+          <a href="#">Stuff</a>
         </li>
         <li>
-          <a
-            href="#"
-            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
-            >Resume</a
-          >
+          <a href="#">Resume</a>
         </li>
         <li>
-          <a
-            href="#"
-            class="hover:bg-[#7DF9FF] transition-all duration-300 px-4 py-2 rounded-md"
-            >Contact</a
-          >
+          <a href="#">Contact</a>
         </li>
       </ul>
     </nav>
