--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,23 +2,4 @@
 import MainLayout from '../layouts/MainLayout.astro';
 ---
 
-<MainLayout>
-  <header
-    class="flex justify-between items-center py-3 px-24 border-b-4 border-black"
-  >
-    <h1 class="text-5xl font-semibold p-2">Brad Johnson</h1>
-    <nav>
-      <ul class="flex text-lg uppercase">
-        <li>
-          <a href="#">Stuff</a>
-        </li>
-        <li>
-          <a href="#">Resume</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-</MainLayout>
+<MainLayout />
