--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,13 @@
 import MainLayout from '../layouts/MainLayout.astro';
 ---
 
-<MainLayout />
+<MainLayout>
+  <div class="grid grid-cols-2 gap-4 min-h-screen">
+    <div class="border-r-4 border-border">
+      <p>Stuff Here</p>
+    </div>
+    <div>
+      <p>Stuff Here</p>
+    </div>
+  </div>
+</MainLayout>
