--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,7 +1,6 @@
 ---
 import '@/styles/globals.css';
-import '@fontsource/darker-grotesque';
-import { Button } from '@/components/ui/button';
+import '@fontsource/archivo';
 ---
 
 <html lang="en">
@@ -15,31 +14,28 @@ import { Button } from '@/components/ui/button';
 
   <body class="font-sans h-screen bg-bg">
     <header
-      class="flex justify-between items-center py-3 px-24 border-b-4 border-border bg-[#DFE5F2]"
+      class="flex justify-center items-center py-3 px-24 border-b-4 border-border bg-[#DFE5F2]"
     >
-      <h1 class="text-5xl font-semibold p-2">
-        <a href="/">Brad Johnson</a>
-      </h1>
       <nav>
-        <ul class="flex text-lg gap-2">
+        <ul class="flex text-2xl gap-2">
           <li>
             <a
               href="/projects"
-              class="hover:bg-main transition-all duration-300 px-3 py-1.5 rounded-base"
+              class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
               >Projects</a
             >
           </li>
           <li>
             <a
               href="/resume"
-              class="hover:bg-main transition-all duration-300 px-3 py-1.5 rounded-base"
+              class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
               >Resume</a
             >
           </li>
           <li>
             <a
               href="#"
-              class="hover:bg-main transition-all duration-300 px-3 py-1.5 rounded-base"
+              class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
               >Contact</a
             >
           </li>
