--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,39 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+import SocialButton from '@/components/SocialButton.astro';
 ---
 
 <MainLayout>
-  <div class="grid grid-cols-2 gap-4 min-h-screen">
-    <div class="border-r-4 border-border">
-      <p>Stuff Here</p>
-    </div>
-    <div>
-      <p>Stuff Here</p>
-    </div>
+  <div class="flex flex-col w-1/2 mx-auto mt-32 gap-4">
+    <section class="bg-main px-16 py-8 rounded-base border-4 border-border">
+      <h1 class="text-4xl mb-4">Hi, I'm Brad</h1>
+      <div class="text-xl">
+        <p>I'm a Sr. Technical Customer Success Manager at Cloudinary</p>
+        <p>
+          I also love to tinker with web tech and fancy myself a web dev
+          hobbyist.
+        </p>
+      </div>
+    </section>
+    <section class="flex gap-4">
+      <SocialButton
+        icon="../icons/github.svg"
+        alt="GitHub Logo"
+        link="https://github.com/brad-j"
+        title="GitHub"
+      />
+      <SocialButton
+        icon="../icons/linkedin.svg"
+        alt="LinkedIn Logo"
+        link="https://www.linkedin.com/in/bradjohnson0311/"
+        title="LinkedIn"
+      />
+      <SocialButton
+        icon="../icons/twitter.svg"
+        alt="Twitter Logo"
+        link="https://x.com/brad__j"
+        title="Twitter"
+      />
+    </section>
   </div>
 </MainLayout>
