Mobile looking good

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,38 +2,40 @@
 
 ---
 
-<header
-  class="flex justify-center items-center py-3 px-24 border-b-4 border-border bg-[#DFE5F2]"
->
-  <nav>
-    <ul class="flex text-2xl gap-2">
+<header class="border-b-4 border-border bg-[#DFE5F2]">
+  <nav class="max-w-7xl mx-auto px-4 py-3">
+    <ul class="flex flex-wrap justify-center text-lg md:text-2xl gap-2">
       <li>
         <a
           href="/"
-          class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
-          >Home</a
+          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
         >
+          Home
+        </a>
       </li>
       <li>
         <a
           href="/projects"
-          class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
-          >Projects</a
+          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
         >
+          Projects
+        </a>
       </li>
       <li>
         <a
           href="/resume"
-          class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
-          >Resume</a
+          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
         >
+          Resume
+        </a>
       </li>
       <li>
         <a
           href="#"
-          class="hover:bg-main transition-all duration-200 px-3 py-1.5 rounded-base"
-          >Contact</a
+          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
         >
+          Contact
+        </a>
       </li>
     </ul>
   </nav>
