--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,14 @@ import SocialButton from '@/components/SocialButton.astro';
 ---
 
 <MainLayout>
-  <div class="flex flex-col w-1/2 mx-auto mt-32 gap-4">
-    <section class="bg-main px-16 py-8 rounded-base border-4 border-border">
-      <h1 class="text-4xl mb-4">Hi, I'm Brad</h1>
-      <div class="text-xl">
+  <div
+    class="flex flex-col w-full md:w-2/3 lg:w-1/2 mx-auto mt-8 md:mt-32 gap-4 px-4"
+  >
+    <section
+      class="bg-main px-4 md:px-16 py-6 md:py-8 rounded-base border-4 border-border"
+    >
+      <h1 class="text-3xl md:text-4xl mb-4">Hi, I'm Brad</h1>
+      <div class="text-lg md:text-xl space-y-2">
         <p>I'm a Sr. Technical Customer Success Manager at Cloudinary</p>
         <p>
           I also love to tinker with web tech and fancy myself a web dev
@@ -15,7 +19,7 @@ import SocialButton from '@/components/SocialButton.astro';
         </p>
       </div>
     </section>
-    <section class="flex gap-4">
+    <section class="flex flex-wrap justify-center md:justify-start gap-4">
       <SocialButton
         icon="../icons/linkedin.svg"
         alt="LinkedIn Logo"
