--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
 ---
 
 <MainLayout>
-  <div class="grid grid-cols-3 gap-4 mt-6 px-8">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6 px-4 md:px-8">
     <ProjectCard
       title="A blog CMS made with Laravel and Filament"
       description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, sapiente totam iste enim a animi."
