Updated project page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,11 +6,11 @@ import ProjectCard from '@/components/ProjectCard.astro';
 <MainLayout>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6 px-4 md:px-8">
     <ProjectCard
-      title="A blog CMS made with Laravel and Filament"
-      description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, sapiente totam iste enim a animi."
-      image="https://res.cloudinary.com/brad-dev/image/upload/v1730733589/syyge67hvedt0hzg4iph.png"
-      image_alt="Screenshot of the blog CMS"
-      link="https://github.com/brad-jonson/laravel-filament-blog"
+      title="Cloudinary Last Access Reports Interface"
+      description="A Next.js dashboard for managing Cloudinary's Last Access Reports. Built with TypeScript, Tailwind CSS, and shadcn/ui components, this tool helps track asset usage and optimize storage by identifying unused media assets."
+      image="https://res.cloudinary.com/brad-dev/image/upload/f_auto,q_auto/qdnizc7luawvkbg2t1om.png"
+      image_alt="Screenshot of Cloudinary Last Access Reports Interface"
+      link="https://github.com/brad-j/cloudinary-lar"
       button_text="View on GitHub"
     />
   </div>
