--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -3,5 +3,5 @@ import MainLayout from '@/layouts/MainLayout.astro';
 ---
 
 <MainLayout>
-  <h1 class="text-5xl font-semibold p-2">Resume</h1>
+  <h1 class="text-2xl font-semibold p-2">Resume - Coming Soon!</h1>
 </MainLayout>
