--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import SocialButton from '@/components/SocialButton.astro';
     <section
       class="bg-main px-4 md:px-16 py-6 md:py-8 rounded-base border-4 border-border"
     >
-      <h1 class="text-3xl md:text-4xl mb-4">Hi, I'm Brad</h1>
+      <h1 class="text-3xl md:text-4xl mb-4 font-semibold">Hi, I'm Brad</h1>
       <div class="text-lg md:text-xl space-y-2">
         <p>I'm a Sr. Technical Customer Success Manager at Cloudinary</p>
         <p>
@@ -19,7 +19,7 @@ import SocialButton from '@/components/SocialButton.astro';
         </p>
       </div>
     </section>
-    <section class="flex flex-wrap justify-center md:justify-start gap-4">
+    <section class="flex flex-wrap justify-center gap-4">
       <SocialButton
         icon="../icons/linkedin.svg"
         alt="LinkedIn Logo"
@@ -37,6 +37,12 @@ import SocialButton from '@/components/SocialButton.astro';
         alt="Twitter Logo"
         link="https://x.com/brad__j"
         title="Twitter"
+      />
+      <SocialButton
+        icon="../icons/mail.svg"
+        alt="Email Logo"
+        link="mailto:brad@bradjohnson.io"
+        title="Email"
       />
     </section>
   </div>
