--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,7 +1,8 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
+import ResumeComponent from '@/components/Resume';
 ---
 
 <MainLayout>
-  <h1 class="text-2xl font-semibold p-2">Resume - Coming Soon!</h1>
+  <ResumeComponent client:load />
 </MainLayout>
