Added meta description

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,6 +11,10 @@ import Header from '@/components/Header.astro';
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Brad Johnson</title>
+    <meta
+      name="description"
+      content="Senior Customer Success Manager sharing customer experience insights and coding projects. Explore my professional journey, development portfolio, and resume."
+    />
     <ViewTransitions />
   </head>
 
