--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,10 @@ import SocialButton from '@/components/SocialButton.astro';
         <p>I'm a Sr. Technical Customer Success Manager at Cloudinary</p>
         <p>
           I also love to tinker with web tech and fancy myself a web dev
-          hobbyist.
+          hobbyist. Checkout the <a
+            href="/projects"
+            class="underline hover:text-[#30F]">projects</a
+          > I'm working on.
         </p>
       </div>
     </section>
