--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -7,14 +7,14 @@ interface Props {
   alt: string;
 }
 
-const { title, link, icon } = Astro.props;
+const { title, link, icon, alt } = Astro.props;
 ---
 
 <Button
   className="uppercase text-lg font-semibold bg-[#A3E636] py-[24px] sm:py-0"
 >
   <a href={link} target="_blank" class="flex items-center gap-2">
-    <img src={icon} alt={title} class="w-6 h-6" />
+    <img src={icon} alt={alt} class="w-6 h-6" />
     {title}
   </a>
 </Button>
