--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
     <ProjectCard
       title="Cloudinary Last Access Reports Interface"
       description="A Next.js dashboard for managing Cloudinary's Last Access Reports. Built with TypeScript, Tailwind CSS, and shadcn/ui components, this tool helps track asset usage and optimize storage by identifying unused media assets."
-      image="https://res.cloudinary.com/brad-dev/image/upload/f_auto,q_auto/qdnizc7luawvkbg2t1om.png"
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto/qdnizc7luawvkbg2t1om.png"
       image_alt="Screenshot of Cloudinary Last Access Reports Interface"
       link="https://github.com/brad-j/cloudinary-lar"
       button_text="View on GitHub"
