Changed bg color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<footer class="sticky bottom-0 text-center py-1.5 mt-auto bg-bg">
+<footer class="sticky bottom-0 text-center py-1.5 mt-auto bg-[#E2E4DD]">
   <p class="text-neutral-500">© 2024 Brad Johnson. All rights reserved.</p>
 </footer>
