--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -34,7 +34,7 @@ import Footer from '@/components/Footer.astro';
     </script>
   </head>
 
-  <body class="font-sans min-h-screen bg-bg flex flex-col">
+  <body class="font-sans min-h-screen bg-[#E2E4DD] flex flex-col">
     <Header />
     <main class="flex-1">
       <slot />
