Added new project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,8 @@ import SocialButton from '@/components/SocialButton.astro';
 ---
 
 <MainLayout>
-  <div
-    class="flex flex-col w-full md:w-2/3 lg:w-1/2 mx-auto mt-8 md:mt-32 gap-4 px-4"
-  >
-    <div>
+  <div class="flex justify-center gap-10 px-12">
+    <div class="w-1/2 md:mt-24">
       <h1 class="text-3xl md:text-6xl font-semibold mb-3">Hi, I'm Brad</h1>
       <section
         class="bg-main px-4 md:px-16 py-6 md:py-8 rounded-base border-4 border-border mb-3"
