--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,5 +13,13 @@ import ProjectCard from '@/components/ProjectCard.astro';
       link="https://github.com/brad-j/cloudinary-lar"
       button_text="View on GitHub"
     />
+    <ProjectCard
+      title="gymCALC"
+      description="A simple app that converts kg to lbs, generates 1RM estimates and percentages, and includes a rest timer. Built with Next.js, TypeScript, and Tailwind CSS, shadcn/ui. This app is perfect for weightlifting enthusiasts."
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto/ozyigi8zvfepycgo4v6g.png"
+      image_alt="Screenshot of gymCALC web app"
+      link="https://gymcalc.app"
+      button_text="Check it out"
+    />
   </div>
 </MainLayout>
