--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { Analytics } from '@vercel/analytics/react';
 import '@/styles/globals.css';
 import { ViewTransitions } from 'astro:transitions';
 import Header from '@/components/Header.astro';
@@ -40,5 +41,6 @@ import Footer from '@/components/Footer.astro';
       <slot />
     </main>
     <Footer />
+    <Analytics />
   </body>
 </html>
