--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Analytics from '@vercel/analytics/astro';
 import '@/styles/globals.css';
 import { ViewTransitions } from 'astro:transitions';
 import Header from '@/components/Header.astro';
@@ -38,6 +39,7 @@ import Footer from '@/components/Footer.astro';
     <Header />
     <main class="flex-1">
       <slot />
+      <Analytics />
     </main>
     <Footer />
   </body>
