--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -33,6 +33,10 @@ import Footer from '@/components/Footer.astro';
 
       gtag('config', 'G-LMP5VP7HQ5');
     </script>
+    <script
+      defer
+      data-domain="gymcalc.app"
+      src="https://plausible.io/js/script.js"></script>
   </head>
 
   <body class="font-sans min-h-screen bg-[#E2E4DD] flex flex-col">
