Re-added plausible

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,7 +35,7 @@ import Footer from '@/components/Footer.astro';
     </script>
     <script
       defer
-      data-domain="gymcalc.app"
+      data-domain="bradjohnson.io"
       src="https://plausible.io/js/script.outbound-links.js"></script>
     <script>
       window.plausible =
