--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
       <li>
         <a
           href="/"
-          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
+          class="inline-block transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base border-2 border-transparent hover:border-black hover:bg-yellow-300"
         >
           Home
         </a>
@@ -16,7 +16,7 @@
       <li>
         <a
           href="/projects"
-          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
+          class="inline-block transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base border-2 border-transparent hover:border-black hover:bg-yellow-300"
         >
           Projects
         </a>
@@ -24,7 +24,7 @@
       <li>
         <a
           href="/resume"
-          class="inline-block hover:bg-main transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base"
+          class="inline-block transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base border-2 border-transparent hover:border-black hover:bg-yellow-300"
         >
           Resume
         </a>
