--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -35,7 +35,9 @@ const { title, description, image, image_alt, link, button_text } = Astro.props;
   </CardContent>
   <CardFooter>
     <Button variant="neutral" className="w-full">
-      <a href={link} target="_blank">{button_text}</a>
+      <a href={link} target="_blank" class="text-2xl md:text-lg"
+        >{button_text}</a
+      >
     </Button>
   </CardFooter>
 </Card>
