--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
     <ProjectCard
       title="Cloudinary Last Access Reports Interface"
       description="A Next.js dashboard for managing Cloudinary's Last Access Reports. Built with TypeScript, Tailwind CSS, and shadcn/ui components, this tool helps track asset usage and optimize storage by identifying unused media assets."
-      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto/ozyigi8zvfepycgo4v6g"
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto,ar_16:9/ozyigi8zvfepycgo4v6g"
       image_alt="Screenshot of Cloudinary Last Access Reports Interface"
       link="https://github.com/brad-j/cloudinary-lar"
       button_text="View on GitHub"
@@ -16,7 +16,7 @@ import ProjectCard from '@/components/ProjectCard.astro';
     <ProjectCard
       title="gymCALC"
       description="A simple app that converts kg to lbs, generates 1RM estimates and percentages, and includes a rest timer. Built with Next.js, TypeScript, and Tailwind CSS, shadcn/ui. This app is perfect for weightlifting enthusiasts."
-      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto/ozyigi8zvfepycgo4v6g.png"
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto,ar_16:9/t3lvbzz4tcm2d0xy7e1r.png"
       image_alt="Screenshot of gymCALC web app"
       link="https://gymcalc.app"
       button_text="Check it out"
