Removed resume for now

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,8 +1,9 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
-import ResumeComponent from '@/components/Resume';
+// import ResumeComponent from '@/components/Resume';
 ---
 
 <MainLayout>
-  <ResumeComponent client:load />
+  <!-- <ResumeComponent client:load /> -->
+  <p class="text-5xl font-semibold">Coming Soon</p>
 </MainLayout>
