Fixed front page card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,20 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import SocialButton from '@/components/SocialButton.astro';
+import MainLayout from "../layouts/MainLayout.astro";
+import SocialButton from "@/components/SocialButton.astro";
 ---
 
 <MainLayout>
   <div class="flex justify-center gap-10 px-12">
-    <div class="md:w-1/2 mt-4 md:mt-24">
+    <div class="md:w-2/3 mt-4 md:mt-24">
       <h1 class="text-3xl md:text-6xl font-semibold mb-3">Hi, I'm Brad</h1>
       <section
-        class="bg-main px-4 py-2 lg:px-16 lg:py-8 rounded-base border-4 border-border mb-3"
+        class="bg-main px-4 py-1 lg:px-8 lg:py-8 rounded-base border-4 border-border mb-3"
       >
-        <div class="text-lg md:text-xl">
-          <p>I am a Sr. Technical Customer Success Manager at Cloudinary</p>
-          <p>
+        <div class="text-xl md:text-3xl">
+          <p class="leading-[3rem]">
+            I am a Sr. Technical Customer Success Manager at Cloudinary.
+          </p>
+          <p class="leading-[3rem]">
             I also love to tinker with web tech and fancy myself a web dev
             hobbyist. Checkout the <a
               href="/projects"
