--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,10 +23,10 @@
       </li>
       <li>
         <a
-          href="/resume"
+          href="/blog"
           class="inline-block transition-all duration-200 px-2 md:px-3 py-1.5 rounded-base border-2 border-transparent hover:border-black hover:bg-yellow-300"
         >
-          Resume
+          Blog
         </a>
       </li>
     </ul>
