--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,17 +1,17 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import ProjectCard from '@/components/ProjectCard.astro';
+import MainLayout from "../layouts/MainLayout.astro";
+import ProjectCard from "@/components/ProjectCard.astro";
 ---
 
 <MainLayout>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6 px-4 md:px-8">
     <ProjectCard
-      title="Cloudinary Last Access Reports Interface"
-      description="A Next.js dashboard for managing Cloudinary's Last Access Reports. Built with TypeScript, Tailwind CSS, and shadcn/ui components, this tool helps track asset usage and optimize storage by identifying unused media assets."
-      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto,ar_16:9/ozyigi8zvfepycgo4v6g"
-      image_alt="Screenshot of Cloudinary Last Access Reports Interface"
-      link="https://github.com/brad-j/cloudinary-lar"
-      button_text="View on GitHub"
+      title="Homelab"
+      description="After building a new PC and converting my old into a Proxmox server, I created a GitHub repository to document my homelab setup. I've started self hosting services like Pi-Hole, Jellyfin, Taefik, Portainer and more. I plan on using this to also learn about Kubernetes and other technologies."
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto,ar_16:9/wdyyririwdfskqh51xda.png"
+      image_alt="Link to homelab github repository"
+      link="https://github.com/brad-j/homelab"
+      button_text="Check it out"
     />
     <ProjectCard
       title="gymCALC"
@@ -20,6 +20,14 @@ import ProjectCard from '@/components/ProjectCard.astro';
       image_alt="Screenshot of gymCALC web app"
       link="https://gymcalc.app"
       button_text="Check it out"
+    />
+    <ProjectCard
+      title="Cloudinary Last Access Reports Interface"
+      description="A Next.js dashboard for managing Cloudinary's Last Access Reports. Built with TypeScript, Tailwind CSS, and shadcn/ui components, this tool helps track asset usage and optimize storage by identifying unused media assets."
+      image="https://res.cloudinary.com/brad-dev/image/upload/w_800,f_auto,q_auto,ar_16:9/ozyigi8zvfepycgo4v6g"
+      image_alt="Screenshot of Cloudinary Last Access Reports Interface"
+      link="https://github.com/brad-j/cloudinary-lar"
+      button_text="View on GitHub"
     />
   </div>
 </MainLayout>
