Added blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,5 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout>
-  <h2>Blog</h2>
+  <div class="flex justify-center items-center min-h-[50vh]">
+    <h2 class="text-4xl">Blog - Coming Soon!</h2>
+  </div>
 </MainLayout>
