--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,26 @@
   }
 }
 
+/* html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
+.dark body {
+  background-color: #18181b;
+  color: #fff;
+}
+
+.dark header {
+  background-color: #0a0a0a;
+}
+
+.dark footer {
+  background-color: #0a0a0a;
+
+} */
+
