--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,10 @@
 
 ---
 
-<footer class="sticky bottom-0 text-center py-1.5 mt-auto bg-[#E2E4DD]">
-  <p class="text-neutral-600">© 2024 Brad Johnson. All rights reserved.</p>
+<footer
+  class="sticky bottom-0 text-center py-1.5 mt-auto bg-[#E2E4DD] dark:bg-[#1A2632]"
+>
+  <p class="text-neutral-600 dark:text-neutral-400">
+    © 2024 Brad Johnson. All rights reserved.
+  </p>
 </footer>
