--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -1,5 +1,5 @@
 ---
-import { Button } from '@/components/ui/button';
+import { Button } from "@/components/ui/button";
 interface Props {
   title: string;
   link: string;
@@ -11,7 +11,7 @@ const { title, link, icon, alt } = Astro.props;
 ---
 
 <Button
-  className="uppercase text-lg font-semibold bg-[#A3E636] py-[24px] sm:py-0 w-full md:w-auto"
+  className="uppercase text-lg font-semibold bg-[#13d4d4] py-[24px] sm:py-0 w-full md:w-auto"
 >
   <a href={link} target="_blank" class="flex items-center gap-2">
     <img src={icon} alt={alt} class="w-6 h-6" />
