--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,15 @@ import SocialButton from "@/components/SocialButton.astro";
 <MainLayout>
   <div class="flex justify-center gap-10 px-12">
     <div class="md:w-2/3 mt-4 md:mt-24">
-      <h1 class="text-3xl md:text-6xl font-semibold mb-3">Hi, I'm Brad</h1>
-      <section
-        class="bg-main px-4 py-1 lg:px-8 lg:py-8 rounded-base border-4 border-border mb-3"
+      <h1
+        class="text-3xl md:text-6xl font-semibold mb-3 text-[#2A3B4C] dark:text-[#F5E6C8]"
       >
-        <div class="text-xl md:text-3xl">
+        Hi, I'm Brad
+      </h1>
+      <section
+        class="bg-[#DFE5F2] dark:bg-[#0D151C] px-4 py-1 lg:px-8 lg:py-8 rounded-base border-4 border-[#2A3B4C] dark:border-[#F5E6C8]/65 mb-3"
+      >
+        <div class="text-xl md:text-3xl text-[#2A3B4C] dark:text-[#F5E6C8]">
           <p class="leading-[3rem]">
             I am a Sr. Technical Customer Success Manager at Cloudinary.
           </p>
@@ -18,7 +22,8 @@ import SocialButton from "@/components/SocialButton.astro";
             I also love to tinker with web tech and fancy myself a web dev
             hobbyist. Checkout the <a
               href="/projects"
-              class="underline hover:text-[#30F]">projects</a
+              class="underline hover:text-[#C27D3F] dark:hover:text-[#F4B860] transition-colors duration-200"
+              >projects</a
             > I'm working on.
           </p>
         </div>
