--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer
-  class="sticky bottom-0 text-center py-1.5 mt-auto bg-[#E2E4DD] dark:bg-[#1A2632]"
+  class="sticky bottom-0 text-center py-1.5 mt-auto bg-[#D4D6CF] dark:bg-[#1A2632]"
 >
   <p class="text-neutral-600 dark:text-neutral-400">
     © 2024 Brad Johnson. All rights reserved.
