--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,22 @@
 ---
+import { getCollection } from "astro:content";
 import MainLayout from "../layouts/MainLayout.astro";
+
+import PostCard from "@/components/posts/PostCard.astro";
+
+const posts = await getCollection("posts");
 ---
 
 <MainLayout>
-  <div class="flex justify-center items-center min-h-[50vh]">
-    <h2 class="text-4xl">Blog - Coming Soon!</h2>
+  <div class="mt-20">
+    <ul>
+      {
+        posts.slice(0, 3).map((post) => (
+          <li>
+            <PostCard post={post} />
+          </li>
+        ))
+      }
+    </ul>
   </div>
 </MainLayout>
