--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import ThemeIcon from "./ThemeIcon.astro";
   class="border-b-4 border-[#2A3B4C] bg-[#DFE5F2] dark:bg-[#1A2632] dark:text-[#F5E6C8]"
 >
   <nav class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-    <div class="flex-1"><!-- Empty div for spacing --></div>
+    <div class="flex-1"></div>
     <ul class="flex flex-wrap justify-center text-lg md:text-2xl gap-2">
       <li>
         <a
