--- a/src/components/posts/PostCard.astro
+++ b/src/components/posts/PostCard.astro
@@ -6,7 +6,7 @@ type Props = {
 };
 
 const { post } = Astro.props;
-const { title, date, body } = post.data;
+const { title, date, body, tags } = post.data;
 ---
 
 <article
@@ -39,4 +39,13 @@ const { title, date, body } = post.data;
   <p class="prose dark:prose-invert prose-lg">
     {body}
   </p>
+  <ul class="flex gap-2 mt-4">
+    {
+      tags.map((tag) => (
+        <li class="inline-block px-2 py-1 text-xs font-semibold bg-teal-300 dark:bg-[#F4B860] dark:text-text rounded-lg tracking-wider border-2 border-black">
+          {tag}
+        </li>
+      ))
+    }
+  </ul>
 </article>
