--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,6 +4,9 @@ import "@/styles/globals.css";
 import { ViewTransitions } from "astro:transitions";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
+
+const { title = "bradjohnson.io", description = "My personal website" } =
+  Astro.props;
 ---
 
 <html lang="en">
@@ -11,6 +14,8 @@ import Footer from "@/components/Footer.astro";
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <ViewTransitions />
+    <title>{title}</title>
+    <meta name="description" content={description} />
   </head>
   <body
     class="font-sans min-h-screen bg-[#E2E4DD] dark:bg-[#111A22] dark:text-[#F5E6C8] flex flex-col"
@@ -43,7 +48,6 @@ import Footer from "@/components/Footer.astro";
         window.localStorage.setItem("theme", theme);
       }
 
-      // Handle theme toggle
       function handleToggleClick() {
         const element = document.documentElement;
         element.classList.toggle("dark");
@@ -51,14 +55,12 @@ import Footer from "@/components/Footer.astro";
         localStorage.setItem("theme", isDark ? "dark" : "light");
       }
 
-      // Initialize theme on page load
       document.addEventListener("astro:page-load", () => {
         initializeTheme();
         const themeToggle = document.getElementById("themeToggle");
         themeToggle?.addEventListener("click", handleToggleClick);
       });
 
-      // Cleanup event listeners
       document.addEventListener("astro:before-swap", () => {
         const themeToggle = document.getElementById("themeToggle");
         themeToggle?.removeEventListener("click", handleToggleClick);
